# rtv1

./: .gitignore  CMakeLists.txt  HomeCMakeLists.txt  Makefile  README.md  SchoolCMakeLists.txt  main.c  test.c
includes/: rtv1.h
libft/: .gitignore  CMakeLists.txt  HomeCMakeLists.txt  Makefil000e  Makefile  Makefile234  Makefile_0  author
libft/includes/: bonus.h  get_next_line.h  libft.h  tmp.h
libft/srcs/: ft_main.c  ft_range_stop.c
libft/srcs/arr/: ft_free_array.c  ft_free_matrix.c  ft_range.c
libft/srcs/bonus/: ft_discriminant.c  ft_quadratic.c  ft_shrinking_gap.c
libft/srcs/chr/: ft_tolower.c  ft_toupper.c
libft/srcs/dot/: ft_change_dot.c  ft_change_dot3.c  ft_lenline3.c  ft_movdot3.c  ft_newdot.c  ft_newdot3.c
libft/srcs/fun/: ft_striter.c  ft_striteri.c  ft_strmap.c  ft_strmapi.c
libft/srcs/gnl/: ft_wdcounter.c  get_next_line.c  get_next_line1.txt  gnl3.txt
libft/srcs/is/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_ischar.c  ft_isdigit.c  ft_ishex.c  ft_ishexlow.c  ft_ishexnumber.c  ft_ishexup.c  ft_islower.c  ft_ismark.c  ft_isnumber.c  ft_ispoint.c  ft_isprint.c  ft_issign.c  ft_isspace.c  ft_isupper.c
libft/srcs/loc/: ft_memalloc.c  ft_realloc.c  ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strjoinfree.c  ft_strnew.c  ft_strsub.c
libft/srcs/lst/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
libft/srcs/mem/: ft_bzero.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memrcpy.c  ft_memset.c
minilibx_linux/: Makefile  Makefile.mk
sources/: draw.c  parser.c  sphere.c
(+43 files in other folders)
